objects/MarketPlace_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Market_place_Application__c</fullName>
        <label>Technology Market place Application</label>
        <referenceTo>Technology_Market_place_Application__c</referenceTo>
        <relationshipLabel>MarketPlace Competitors</relationshipLabel>
        <relationshipName>MarketPlace_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MarketPlace Competitor</label>
    <nameField>
        <displayFormat>MPC-{00000}</displayFormat>
        <label>MarketPlace Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MarketPlace Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>